--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Naisubot.",
   "main": "index.js",
   "dependencies": {
+    "better-sqlite3": "^5.4.1",
     "chalk": "^2.4.2",
     "cheerio": "^1.0.0-rc.3",
     "discord.js": "^11.5.1",
