Reset token, changed default prefix.

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "token": "NjA2NTcxNzYxOTE5NTkwNTAz.XUNRhw.88EdYSGAJaoHOosfTNK9WGHnUdE",
-    "prefix": "!",
+    "token": "Your token here.",
+    "prefix": "//",
     "name": "Naisu!",
     "embedcolor": "1279041",
 
