* Moved database to db/ directory. * Added a command to view any user's avatar in full size. * Modified all database related commands to point to the new SQLite directory.

--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
+
 {
-    "token": "Your token here.",
+    "token": "NjA2NTcxNzYxOTE5NTkwNTAz.XdNjjQ.kThnbemegjOwyo3QIhISz5A-hFc",
     "prefix": "//",
     "name": "Naisu!",
     "embedcolor": "1279041",
