* Reset token (I really have to stop committing the secret :/)

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 
 {
-    "token": "NjA2NTcxNzYxOTE5NTkwNTAz.XdNjjQ.kThnbemegjOwyo3QIhISz5A-hFc",
+    "token": "Token goes here",
     "prefix": "//",
     "name": "Naisu!",
     "embedcolor": "1279041",
