Add name field to LQ config in case a user has multiple servers of the same type.

--- a/livequery/lq_config.json
+++ b/livequery/lq_config.json
@@ -3,6 +3,7 @@
     "SQLitePath": "db/LiveQuery.sqlite",
 
     "type": "LQ_Clockwork",
+    "uniqueName": "Debug",
 
     "host": "",
     "db": "",
