--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@google/maps": "^1.1.0",
     "better-sqlite3": "^5.4.1",
+    "body-parser": "^1.19.0",
     "chalk": "^2.4.2",
     "cheerio": "^1.0.0-rc.3",
     "discord.js": "^11.5.1",
