Make the Discord message prettier. Add informative logging for requests.

--- a/livequery/lq_config.json
+++ b/livequery/lq_config.json
@@ -5,5 +5,7 @@
     "type": "LQ_Clockwork",
     "uniqueName": "Debug",
 
-    "port": "25050"
+    "port": "25050",
+
+    "channelID": "673950971172356106"
 }
