Add pats resources dir. Add pat command.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "discord.js": "^11.5.1",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
+    "glob": "^7.1.6",
     "mal-scraper": "^2.6.3",
     "request-promise": "^4.2.4",
     "yargs": "^15.3.1",
