--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "dependencies": {
     "@google/maps": "^1.1.0",
+    "alphavantage": "^2.0.1",
     "better-sqlite3": "^5.4.1",
     "body-parser": "^1.19.0",
     "chalk": "^2.4.2",
     "cheerio": "^1.0.0-rc.3",
     "discord.js": "^11.5.1",
+    "dygraphs": "^2.1.0",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
     "glob": "^7.1.6",
@@ -22,7 +24,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "livequery": "node livequery/livequery.js",
-    "bot": "node index.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
